# HEALTHCARE_SUITE

./: README.md  pyproject.toml
apps/: flask_app.py  streamlit_app.py
data/: sample_interactions.csv
src/healthcare_suite/: __init__.py
src/healthcare_suite/interactions/: __init__.py  db.py  io.py  models.py
src/healthcare_suite/scheduler/: __init__.py  algo.py  calendar.py  models.py
src/healthcare_suite/sir/: __init__.py  model.py  plots.py
tests/: conftest.py  test_interactions.py  test_io_and_plots.py  test_scheduler.py  test_sir.py
